@@ -35,13 +35,19 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.2.13" date="2020-04-13">
+      <description>
+	<p>Fixed greedy DSSI and LV2.</p>
+      </description>
+    </release>
+
     <release version="3.2.12" date="2020-04-13">
       <description>
 	<p>Fixed AgsFFPlayer restore.</p>
 	<p>Improved startup time as loading LV2 plugins.</p>
       </description>
     </release>
-
+    
     <release version="3.2.10" date="2020-04-09">
       <description>
 	<p>Faster load of AgsMachineEditor.</p>
